@@ -6229,22 +6229,23 @@ int update_job(job_desc_msg_t * job_specs, uid_t uid)
 		goto fini;
 
 	if (job_specs->reservation) {
-		if (!IS_JOB_RUNNING(job_ptr)) {
+		if (!IS_JOB_PENDING(job_ptr) && !IS_JOB_RUNNING(job_ptr)) {
 			error_code = ESLURM_DISABLED;
 		} else {
 			int rc;
 			char *save_resv_name = job_ptr->resv_name;
 			job_ptr->resv_name = job_specs->reservation;
+			job_specs->reservation = NULL;	/* Nothing to free */
 			rc = validate_job_resv(job_ptr);
 			if (rc == SLURM_SUCCESS) {
 				info("sched: update_job: setting reservation "
 				     "to %s for job_id %u", job_ptr->resv_name,
 				     job_ptr->job_id);
 				xfree(save_resv_name);
-				job_specs->reservation = NULL;	/* Noth free */
 				update_accounting = true;
 			} else {
 				/* Restore reservation info */
+				job_specs->reservation = job_ptr->resv_name;
 				job_ptr->resv_name = save_resv_name;
 				error_code = rc;
 			}
